[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-sphinx",
  "hatch-vcs",
  "bumps",
  "docutils",
  "matplotlib",
  "columnize",
  "numpy",
  "scipy",
  "siphash24",
  "sphinx",
  "tccbox",
]
build-backend = "hatchling.build"


[project]
name = "sasmodels"
dynamic = [
  "version",
  "dependencies",
  "optional-dependencies",
]
description = "SasModels small-angle scattering modelling"
readme = "README.rst"
requires-python = ">=3.9"
license = { text = "Public domain" }
authors = [
  {name = "SasView Team", email = "developers@sasview.org"},
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Environment :: Console',
  'Intended Audience :: Science/Research',
  'License :: Public Domain',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: C',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Chemistry',
  'Topic :: Scientific/Engineering :: Physics',
]
keywords = [
  "small-angle",
  "scattering",
  "data analysis",
  "neutron",
  "X-ray",
]

[project.urls]
Homepage = "http://sasview.org"
Documentation = "https://www.sasview.org/docs/user/qtgui/Perspectives/Fitting/models/index.html"
Repository = "https://github.com/SasView/sasmodels/"
Issues = "https://github.com/SasView/sasmodels/issues"
Changelog = "https://github.com/SasView/sasmodels/blob/master/CHANGES.rst"

[project.entry-points.pyinstaller40]
hook-dirs = "sasmodels.__pyinstaller:get_hook_dirs"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = [ "build_tools/requirements.txt" ]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
test = [ "build_tools/requirements-test.txt" ]
server = [ "build_tools/requirements-server.txt" ]
OpenCL = [ "build_tools/requirements-opencl.txt" ]
CUDA = [ "build_tools/requirements-cuda.txt" ]
docs = [ "build_tools/requirements-docs.txt" ]


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "sasmodels/_version.py"


[tool.hatch.build.targets.sdist]
include = [
  "build_tools",
  "CHANGES.rst",
  "conftest.py",
  "README.rst",
  "doc",
  "example",
  "explore",
  "sasmodels",
]
exclude = [
  "build",
  "dist",
  "__pycache__",
]
ignore-vcs = true


[tool.hatch.build.targets.wheel]
packages = [
  "sasmodels",
]
artifacts = [
  # match .gitignore but are wanted in the wheel
  "sasmodels/models/lib/gauss*.c",
]
exclude = [
  "__pycache__",
]

[tool.hatch.build.targets.wheel.force-include]
"doc/" = "sasmodels/docs-source"

[[tool.hatch.build.targets.wheel.hooks.sphinx.tools]]
tool = "custom"
environment = { PYTHONPATH = ".." }
out_dir = "model"
expand_globs = true
commands = [
  "{python} genapi.py",
  "{python} genmodel.py ../sasmodels/models/[a-z]*.py",
  "{python} -c \"import shutil; shutil.copytree('../sasmodels/models/img/', 'model/img/', dirs_exist_ok=True)\"",
  "{python} gentoc.py ../sasmodels/models/[a-z]*.py",
]

[[tool.hatch.build.targets.wheel.hooks.sphinx.tools]]
tool = "build"
format = "html"
source = "."
out_dir = "../build/doc"
warnings = true
keep_going = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--doctest-modules",
  "-v",
  "-rsx",
]
doctest_optionflags = "ELLIPSIS"
testpaths = [
  "sasmodels",
]
python_files = [
  "sasmodels/**/*.py",
]
python_functions = [
  "*_test",
  "test_*",
  "model_tests",
]
log_level = "DEBUG"
filterwarnings = [
]
